   library or finding it by disk location, the PATH environment variable is now also set to
   include the FIREBIRD directory. This is to ensure that the correct dlls in the
   firebird client library dependencies are loaded.

10. Testsuite: Ensure consistent UTF-8 output on console.

11. Testsuite: Update Windows script to include FPC 3.0.4 in search path.


FBINTF Change Log  version             (1.0-2) Sat, 04 Mar 2017 14:43:56 +0000

1. Change syntax to Mode Delphi

2. Change all uses of string type to explicit AnsiString in order to ensure
   compatibility between Delphi and FPC. 

3. Various syntax changes to ensure Delphi and FPC compilation including GUIDs
   defined for each interface.

4. Generics syntax variations for Delphi added

5. PChar replaced with PByte expect where an actual string is being referenced,
   where PAnsiChar is used instead.

6. Review of type definitions in IBExternals to ensure Delphi compatibility

7. Testsuite updated for Delphi

FBINTF Change Log  version            (1.0-1) Fri, 24 Feb 2017 12:17:57 +0000

1. Limit maximum Blob segment read/write to MaxuShort. Avoids data loss with
   large blobs and the FB3 API.

2. Update Event Handling algorithm to avoid looping due to recreation of the
   event block.

3. Avoid invalid XSQLDA error when the only parameter is updated to null

4. Array Handling: fix problem with text arrays with character set none. When the
   DB connection has a default character set (e.g. UTF8), an error is raised by
   Firebird if the space allocated is not enough to allow for transliteration, even
   though it is not required for character set none.

5. IBUtils: List of reserved words brought up-to-date

6. Add ISQL style performance statistics collection to IStatement

7. Add IFirebirdAPI.CreateDatabase variant to allow execution of user provided
   CREATE DATABASE statement.

8. Update SQL Statement parsing to allow for Array Dimensions. That is so that the ':' in