@@ -24,7 +24,6 @@
     <RunParams>
       <local>
         <FormatVersion Value="1"/>
-        <CommandLineParams Value="-t 9"/>
       </local>
       <environment>
         <UserOverrides Count="1">
